[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/sketchbutton.PNG" type="Texture" id=1]
[ext_resource path="res://Assets/diamond-eyes.png" type="Texture" id=2]
[ext_resource path="res://Assets/onclick.PNG" type="Texture" id=3]
[ext_resource path="res://Assets/onhover.PNG" type="Texture" id=4]
[ext_resource path="res://Assets/paperairplane.png" type="Texture" id=5]
[ext_resource path="res://GUI Assets/mangocat.png" type="Texture" id=6]
[ext_resource path="res://BerlinRounded-Bold.otf" type="DynamicFontData" id=7]
[ext_resource path="res://Little days.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Scripts/Title.gd" type="Script" id=9]
[ext_resource path="res://GUI Assets/stars.png" type="Texture" id=10]
[ext_resource path="res://GUI Assets/notebook.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 150
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=2]
size = 38
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 45
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 30
outline_size = 2
outline_color = Color( 0.0352941, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="MainTitleControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
mouse_filter = 1
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.392
anchor_right = 0.5
anchor_bottom = 0.392
margin_left = -196.5
margin_top = -92.2
margin_right = 196.5
margin_bottom = 91.8
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.254902, 0.74902, 0.854902, 1 )
text = "Sketch!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.481
anchor_right = 0.5
anchor_bottom = 0.481
margin_left = -283.0
margin_top = -24.6
margin_right = 297.0
margin_bottom = 24.4
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
text = "Online Shared Drawing Boards"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -294.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostButton" type="TextureButton" parent="Buttons"]
anchor_left = 0.3744
anchor_top = 0.183
anchor_right = 0.3744
anchor_bottom = 0.183
margin_left = -140.5
margin_top = -52.521
margin_right = 140.5
margin_bottom = 52.479
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostLabel" type="Label" parent="Buttons/HostButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.0
margin_top = -31.0
margin_right = 49.0
margin_bottom = 31.0
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "Host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="TextureButton" parent="Buttons"]
anchor_left = 0.63
anchor_top = 0.183
anchor_right = 0.63
anchor_bottom = 0.183
margin_left = -140.12
margin_top = -52.521
margin_right = 140.88
margin_bottom = 52.479
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinLabel" type="Label" parent="Buttons/JoinButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -49.0
margin_top = -31.0
margin_right = 49.0
margin_bottom = 31.0
mouse_filter = 1
custom_fonts/font = SubResource( 3 )
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="paperairplane" type="Sprite" parent="Buttons"]
position = Vector2( 791.782, 101.074 )
scale = Vector2( 0.186837, 0.170607 )
texture = ExtResource( 5 )

[node name="HostPopup" type="PopupMenu" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -302.5
margin_top = -213.5
margin_right = 302.5
margin_bottom = 213.5
mouse_filter = 1
popup_exclusive = true
hide_on_item_selection = false
hide_on_checkable_item_selection = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HostPopup"]
margin_left = 2.0
margin_top = 4.0
margin_right = 600.0
margin_bottom = 431.0
color = Color( 0.964706, 0.945098, 0.866667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotebookBackgroun" type="Sprite" parent="HostPopup"]
position = Vector2( 285.125, 207.708 )
scale = Vector2( 1.12966, 0.834115 )
texture = ExtResource( 11 )

[node name="stars" type="Sprite" parent="HostPopup"]
position = Vector2( 102.5, 287.5 )
texture = ExtResource( 10 )

[node name="Form" type="Control" parent="HostPopup"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -188.5
margin_top = 52.0
margin_right = 188.5
margin_bottom = 122.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HostPopup/Form"]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -188.5
margin_top = -25.0
margin_right = 188.5
margin_bottom = 12.0
mouse_filter = 1
custom_fonts/font = SubResource( 4 )
text = "Board Name:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="HostPopup/Form"]
anchor_left = 0.5
anchor_top = 0.721
anchor_right = 0.5
anchor_bottom = 0.721
margin_left = -107.5
margin_top = -19.47
margin_right = 107.5
margin_bottom = 19.53
mouse_default_cursor_shape = 0
align = 1
max_length = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="HostPopup"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -91.0
margin_top = -395.0
margin_right = -15.0
margin_bottom = -340.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HostPopup/CloseButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -29.5
margin_right = 20.0
margin_bottom = 29.5
mouse_filter = 1
custom_fonts/font = SubResource( 5 )
text = "X"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreateButton" type="TextureButton" parent="HostPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -151.5
margin_top = -118.5
margin_right = 129.5
margin_bottom = -13.5
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HostPopup/CreateButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.5
margin_top = -29.5
margin_right = 77.5
margin_bottom = 29.5
mouse_filter = 1
custom_fonts/font = SubResource( 5 )
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadButton" type="TextureButton" parent="HostPopup"]
margin_left = 151.0
margin_top = 199.0
margin_right = 432.0
margin_bottom = 304.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HostPopup/LoadButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.5
margin_top = -29.5
margin_right = 77.5
margin_bottom = 29.5
mouse_filter = 1
custom_fonts/font = SubResource( 5 )
text = "Load"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinPopup" type="PopupMenu" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -302.5
margin_top = -213.5
margin_right = 302.5
margin_bottom = 213.5
mouse_filter = 1
popup_exclusive = true
hide_on_item_selection = false
hide_on_checkable_item_selection = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="JoinPopup"]
margin_right = 598.0
margin_bottom = 427.0
color = Color( 0.964706, 0.945098, 0.866667, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotebookBackgroun2" type="Sprite" parent="JoinPopup"]
position = Vector2( 283.125, 208.208 )
scale = Vector2( 1.13264, 0.835836 )
texture = ExtResource( 11 )

[node name="mangocat" type="Sprite" parent="JoinPopup"]
position = Vector2( 455.5, 270 )
scale = Vector2( 0.566343, 0.562832 )
texture = ExtResource( 6 )

[node name="Form" type="Control" parent="JoinPopup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -188.5
margin_top = 52.0
margin_right = 188.5
margin_bottom = 122.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="JoinPopup/Form"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -118.5
margin_top = -37.0
margin_right = 96.5
margin_bottom = 2.0
mouse_default_cursor_shape = 0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="JoinPopup/Form"]
anchor_right = 1.0
margin_left = -6.0
margin_top = -4.0
margin_right = -6.0
margin_bottom = 33.0
mouse_filter = 1
custom_fonts/font = SubResource( 6 )
text = "IP Address:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CloseButton" type="TextureButton" parent="JoinPopup"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -74.0
margin_top = -393.0
margin_right = 2.0
margin_bottom = -338.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="JoinPopup/CloseButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -19.5
margin_top = -30.5
margin_right = 105.5
margin_bottom = 28.5
mouse_filter = 1
custom_fonts/font = SubResource( 5 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinBoardButton" type="TextureButton" parent="JoinPopup"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 150.0
margin_top = -215.0
margin_right = 431.0
margin_bottom = -110.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="JoinPopup/JoinBoardButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.5
margin_top = -29.5
margin_right = 77.5
margin_bottom = 29.5
mouse_filter = 1
custom_fonts/font = SubResource( 5 )
text = "Join"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileDialog" type="FileDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -150.0
margin_right = 256.0
margin_bottom = 150.0
rect_min_size = Vector2( 512, 300 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
filters = PoolStringArray( "*.png", "*.jpg" )
current_dir = "C:/Users/saraj/Desktop/NewSketch/Sketch-/SketchProject"
current_path = "C:/Users/saraj/Desktop/NewSketch/Sketch-/SketchProject/"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/HostButton" to="." method="_on_HostButton_pressed"]
[connection signal="pressed" from="Buttons/JoinButton" to="." method="_on_JoinButton_pressed"]
[connection signal="pressed" from="HostPopup/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="HostPopup/CreateButton" to="." method="_on_CreateButton_pressed"]
[connection signal="pressed" from="HostPopup/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="JoinPopup/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressed" from="JoinPopup/JoinBoardButton" to="." method="_on_JoinBoardButton_pressed"]
[connection signal="confirmed" from="FileDialog" to="." method="_on_FileDialog_confirmed"]
